--- a/3 Ejercicio HTML Componentes Básicos/index.html
+++ b/3 Ejercicio HTML Componentes Básicos/index.html
@@ -1,5 +1,43 @@
-<!-- Example image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>birthday</title>
+</head>
+<body>
+<h1>Es mi cumpleaños!</h1>
+<h2>En 14 de septiembre</h2>
+    <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg">
+<h3>Qué necesitamos:</h3>
+    <ul>
+        <li>Globos</li>
+        <li>Pastel</li>
+        <li>Disfrutar</li>
+    </ul>
+    <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">En esta ubicación</a>
+</body>
+</html>
 
-<!-- Example Google Maps Link -->
-https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
