--- a/5 Práctica HTML Boiler Plate/index.html
+++ b/5 Práctica HTML Boiler Plate/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<!-- Define el tipo de documento como HTML5 -->
 <html lang="en">
-  <!-- Establece el idioma del documento a inglés -->
-  <head>
-    <meta charset="UTF-8" />
-    <!-- Define la codificación de caracteres como UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Configura la ventana gráfica para que sea responsive -->
-    <title>My Site</title>
-    <!-- Título del documento -->
-  </head>
-  <body>
-    <h1>Hola Mundo</h1>
-    <!-- Encabezado de nivel 1 con el texto "Hola Mundo" -->
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+</head>
+<body>
+  <h1>Portafolio José Luis Chávez</h1>
+  <h2>Soy un desarrollador web</h2>
+  <hr/>
+  <a href=""></a>
+  
+</body>
 </html>
