--- a/5 Práctica HTML Boiler Plate/index.html
+++ b/5 Práctica HTML Boiler Plate/index.html
@@ -9,7 +9,7 @@
   <h1>Portafolio José Luis Chávez</h1>
   <h2>Soy un desarrollador web</h2>
   <hr/>
-  <h2><a href="">Proyecto clasificación de películas</a></h2>
+  <h2><a href="https://github.com/jayelsea/web-development-projects/blob/main/1%20Ejercicio%20Etiquetas%20HTML/index.html">Proyecto clasificación de películas</a></h2>
   <img src="../5 Ejercicio HTML Boiler Plate Portafolio/assets/images/películas.PNG" alt="">
   <h2><a href="https://github.com/jayelsea/web-development-projects/blob/main/3%20Ejercicio%20HTML%20Componentes%20B%C3%A1sicos/index.html">Proyecto de invitación de cumpleaños</a></h2>
   <img src="../5 Ejercicio HTML Boiler Plate Portafolio/assets/images/Captura.PNG" alt="">
