--- a/5 Práctica HTML Boiler Plate/public/contact.html
+++ b/5 Práctica HTML Boiler Plate/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contacto</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: 0989810942</p>
+<p>Email: joseffter789@gmail.com</p>
 <p>Address:</p>
 <p>
-  12 de octubre<br />
+  Armenia<br />
   Quito<br />
   Ecuador <br />
 </p>
