--- a/6 Ejercicio CSS/index.html
+++ b/6 Ejercicio CSS/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1>Tres Métodos de Agregar CSS</h1>
   <!-- Crear 3 Enlaces a Las 3 Páginas Web: en línea, interna y externa -->
+   <a href="./internal.html">internal</a>
+   <a href="./inline.html">inline</a>
+   <a href="./external.html">external</a>
 </body>
 
 </html>
