--- a/11 Ejercicio css grid/index.html
+++ b/11 Ejercicio css grid/index.html
@@ -7,6 +7,21 @@
     /* Write your code here */
     /* Each square should be 100px by 100px */
     /* My colours for white: #f0d9b5, black: #b58863 */
+    .container{
+      width: 400px;
+      height: 400px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      
+    }
+    .white{
+      background-color: #f0d9b5;
+
+    }
+    .black{
+      background-color: #b58863;
+    }
   </style>
 </head>
 
@@ -15,7 +30,7 @@
     <div class="white"></div>
     <div class="black"></div>
     <div class="white"></div>
-    <div class="black"></div>
+    <div class="black"></s></div>
     <div class="white"></div>
     <div class="black"></div>
     <div class="white"></div>
